[package]
name = "kube-fit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
prometheus-http-query = "0.8.3"
chrono = "0.4"
colored = "2.0"
ratatui = "0.29" # Or latest version
crossterm = "0.28"
anyhow = "1.0"